--- a/pm-app/src/Diagram/Joystick.css
+++ b/pm-app/src/Diagram/Joystick.css
@@ -6,13 +6,14 @@
   bottom: 10px;
   width: 120px;
   height: 120px;
-  border: 1px solid red;
+  border: 3px solid rgba(0, 0, 0, 0.2);
   border-radius: 60px;
 }
 
 #joystick-touch {
   position: absolute;
-  border: 2px solid black;
+  border: 5px solid rgba(255,255,255,0.7);
+  background: rgba(0,0,0,0.4);
   left: 40px;
   top: 40px;
   width: 40px;
