--- a/pm-app/src/Diagram/Diagram.css
+++ b/pm-app/src/Diagram/Diagram.css
@@ -50,6 +50,8 @@
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   padding: 5px;
+  /* popover display above the header select */
+  z-index: 9999;
 }
 
 .cell-popover .action i {
