Feature: backend for actions manipulation; minor changes

--- a/pm-app/src/Organization/Organization.css
+++ b/pm-app/src/Organization/Organization.css
@@ -1,7 +1,9 @@
 .ant-layout .ant-layout {
     position: relative;
     overflow: hidden;
+    touch-action: none;
 }
+
 
 .ant-layout-content {
   position: relative;
