Add and view actions

--- a/pm-app/src/ActionList/ActionList.css
+++ b/pm-app/src/ActionList/ActionList.css
@@ -7,3 +7,13 @@
 #addFlow {
   width: 60px;
 }
+
+.ant-list {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.ant-list-item-content-single {
+  justify-content: space-between;
+}
