Add file upload and attachment

--- a/pm-app/src/Diagram/Diagram.css
+++ b/pm-app/src/Diagram/Diagram.css
@@ -67,3 +67,11 @@
 .first-add-p {
   margin-top: 200px;
 }
+
+form .file-select {
+  width: 80%;
+}
+
+form .file-select + a {
+  margin-left: 10px;
+}
