--- a/pm-app/src/Main.css
+++ b/pm-app/src/Main.css
@@ -21,10 +21,10 @@
 }
 
 .sider-info .sider-info-position{
-    margin-left: 30px;
+    width: 100%;
     height: 50px;
     line-height: 25px;
-    text-align: left;
+    text-align: center;
     display: inline-block;
 }
 
