--- a/pm-app/src/Setting/Setting.css
+++ b/pm-app/src/Setting/Setting.css
@@ -1,8 +1,9 @@
 #logOut {
-  text-align: center;
   margin: 20px;
 }
 
-#logOutButton {
+.ant-btn {
   width: 200px;
+  display: block;
+  margin: 10px auto;
 }
